[workspace]
members = [
    "programs/*"
, "test-utils"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = {version="0.30.1",features=["init-if-needed"]}
anchor-spl={version="0.30.1",features=["associated_token"]}
pyth-solana-receiver-sdk = "0.3.2"
litesvm = "0.3.0"
solana-program = "2.0"
solana-sdk = "2.0"

nonce = { path = "programs/nonce" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
