[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
litesvm.workspace = true
pyth-solana-receiver-sdk.workspace = true
nonce.workspace = true
litesvm-token = "0.3.0"

