[package]
name = "nonce"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nonce"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
pyth-solana-receiver-sdk.workspace = true

[dev-dependencies]
solana-program.workspace = true
solana-sdk.workspace = true
litesvm.workspace = true